--- a/160927_PersonalPage/160927_PersonalPage/Views/Home/About.cshtml
+++ b/160927_PersonalPage/160927_PersonalPage/Views/Home/About.cshtml
@@ -12,7 +12,16 @@
     <link href="~/GlobalStyleSheet.css" rel="stylesheet" />
 </head>
 <body>
-    <div> 
+    <header>
+        <h2>XXX Ultimate Promotion Page XXX</h2>
+    </header>
+    <div id="Links">
+        <a href="/">Home</a>
+        |
+        <a href="/Home/About">About</a>
     </div>
+    <hr id="LinkSeperator" />
+
+    <p>Den här sidan är till för att visa upp arbeten</p>
 </body>
 </html>
