--- a/160927_PersonalPage/160927_PersonalPage/Views/Home/Index.cshtml
+++ b/160927_PersonalPage/160927_PersonalPage/Views/Home/Index.cshtml
@@ -15,12 +15,13 @@
     <header>
         <h2>XXX Ultimate Promotion Page XXX</h2>
     </header>  
-     <div>
-         <aside>
-             <a href="./Views/Home/Index.cshtml">Home</a>
-             <br>
-             <a href="~/Views/Home/About.cshtml">About</a>
-         </aside>
+    <div id="Links">
+        <a href="/">Home</a>
+        |
+        <a href="/Home/About">About</a>
     </div>
+    <hr id="LinkSeperator"/>
+
+    <p>Välkommen!</p>
 </body>
 </html>
