--- a/160927_PersonalPage/160927_PersonalPage/Views/Home/About.cshtml
+++ b/160927_PersonalPage/160927_PersonalPage/Views/Home/About.cshtml
@@ -12,16 +12,18 @@
     <link href="~/GlobalStyleSheet.css" rel="stylesheet" />
 </head>
 <body>
-    <header>
-        <h2>XXX Ultimate Promotion Page XXX</h2>
-    </header>
-    <div id="Links">
-        <a href="/">Home</a>
-        |
-        <a href="/Home/About">About</a>
+    <div class="MainText">
+        <h1>
+            I DEVELOPE, MAINTAIN AND IMPROVE SOFTWARE
+        </h1>
+        <p>
+            I am a software development student at Östra in Skogås, Sweden with a passion for problem solving and implementing creative solutions.
+            My goals are to create a better workplace through good communication, being open-minded and a good teamplayer; all while delivering high quality products.
+        </p>
+            
+            <div style="text-align: center; margin-top: 5%;">
+                <a href="/">Home</a>
+            </div>
     </div>
-    <hr id="LinkSeperator" />
-
-    <p>Den här sidan är till för att visa upp arbeten</p>
 </body>
 </html>
