--- a/160927_PersonalPage/160927_PersonalPage/Views/Home/Index.cshtml
+++ b/160927_PersonalPage/160927_PersonalPage/Views/Home/Index.cshtml
@@ -12,16 +12,18 @@
     <link href="~/GlobalStyleSheet.css" rel="stylesheet" />
 </head>
 <body>
-    <header>
-        <h2>XXX Ultimate Promotion Page XXX</h2>
-    </header>  
-    <div id="Links">
-        <a href="/">Home</a>
-        |
-        <a href="/Home/About">About</a>
-    </div>
-    <hr id="LinkSeperator"/>
+    <div class="MainText">
+        <h1>
+            WELCOME TO MY PERSONAL PAGE
+        </h1>
+        <p>
+            Hi! I am Jesper Oscarsson and this is a personal page dedicated to showing my past and current projects. 
+            In the future a link gallery might be added and a page for showcasing projects.
+        </p>
 
-    <p>Välkommen!</p>
+        <div style="text-align: center; margin-top: 5%;">
+            <a href="/Home/About">About</a>
+        </div>
+    </div>
 </body>
 </html>
