Added some content in index view and created the basis of site design in layout

--- a/MyPage/MyPage/Views/Home/Index.cshtml
+++ b/MyPage/MyPage/Views/Home/Index.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Index";
 }
-
-<h2>Index</h2>
-
+<div class="container">
+    <div class="page-header">
+        <h2>Welcome!</h2>
+    </div>
+    <p>Now I know what you might be thinking "Ohh another bootstrap page!" and you're right, it <strong>is</strong> just another bootstrap page. <strong>BUT</strong> this is a special bootstrap page; it's mine!</p>
+    <p>So who am I you might be asking?</p>
+</div>
