--- a/MyPage/MyPage/Views/Home/Index.cshtml
+++ b/MyPage/MyPage/Views/Home/Index.cshtml
@@ -2,10 +2,30 @@
 @{
     ViewBag.Title = "Index";
 }
+
 <div class="container">
-    <div class="page-header">
-        <h2>Welcome!</h2>
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+        <div class="page-header">
+            <h2>Welcome!</h2>
+
+            <p>
+                Now I know what you might be thinking "Ohh another bootstrap page!" and you're right, it <strong>is</strong>
+                just another bootstrap page. <strong>BUT</strong> this is a special bootstrap page; it's mine!
+            </p>
+            <p>
+                So who am I you might be asking?
+            </p>
+        </div>
+
+        <p>
+            I am a software development student at Östra Gymnasiet in Skogås, Sweden  and I have a passion for problem solving and
+            creating creative solutions. In my work I strive to be a good teamplayer and to work with an open mind meaning I listen and
+            always try to look from another perspective.
+        </p>
+        <p>
+            My goals are to always learn new things, to be a good team asset and to deliever the highest quality software I can.
+        </p>
     </div>
-    <p>Now I know what you might be thinking "Ohh another bootstrap page!" and you're right, it <strong>is</strong> just another bootstrap page. <strong>BUT</strong> this is a special bootstrap page; it's mine!</p>
-    <p>So who am I you might be asking?</p>
+    <div class="col-md-2"></div>
 </div>
