--- a/MyPage/MyPage/Views/Home/Index.cshtml
+++ b/MyPage/MyPage/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
             </p>
         </div>
 
-        <p>
+        <p id="SelfDescription">
             I am a software development student at Östra Gymnasiet in Skogås, Sweden  and I have a passion for problem solving and
             creating creative solutions. In my work I strive to be a good teamplayer and to work with an open mind meaning I listen and
             always try to look from another perspective.
