--- a/MyPage/MyPage/Views/Shared/_Layout.cshtml
+++ b/MyPage/MyPage/Views/Shared/_Layout.cshtml
@@ -14,20 +14,23 @@
         <div class="container-fluid">
             <!--Home button-->
             <div class="navbar-header">
-                <a class="navbar-brand " href="#"><span class="glyphicon glyphicon-home"></span></a>
+                <a class="navbar-brand " href="/"><span class="glyphicon glyphicon-home"></span></a>
             </div>
+            <!--Projects view link-->
+            <ul class="nav navbar-nav">
+                <li><a href="#">Projects</a></li>
+            </ul>      
             <!--Dropdown menu-->
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Quick View<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Content#1</a></li>
-                        <li><a href="#">Content#2</a></li>
-                        <li><a href="#">Content#3</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#SelfDescription">About me</a></li>
                     </ul>
                 </li>
             </ul>
-
         </div>
     </nav>
 
