Added resources map for pictures etc. Changed design in index view.

--- a/MyPage/MyPage/Views/Home/Index.cshtml
+++ b/MyPage/MyPage/Views/Home/Index.cshtml
@@ -4,8 +4,10 @@
 }
 
 <div class="container">
-    <div class="col-md-2"></div>
-    <div class="col-md-8">
+    <div class="col-md-1">
+        <a href="#"><img src="../Resources/websiteReturnBtn.png" alt="Return button" style="width: 70%; height: 70%;"></a>
+    </div>
+    <div class="col-md-7">
         <div class="page-header">
             <h2>Welcome!</h2>
 
@@ -27,5 +29,5 @@
             My goals are to always learn new things, to be a good team asset and to deliever the highest quality software I can.
         </p>
     </div>
-    <div class="col-md-2"></div>
+    <div class="col-md-4" style="background-color: green"></div>
 </div>
