Updated index design and added some comments. Also changed navbar design in layout page + StyleSheetMain

--- a/MyPage/MyPage/Views/Home/Index.cshtml
+++ b/MyPage/MyPage/Views/Home/Index.cshtml
@@ -4,30 +4,36 @@
 }
 
 <div class="container">
-    <div class="col-md-1">
-        <a href="#"><img src="../Resources/websiteReturnBtn.png" alt="Return button" style="width: 70%; height: 70%;"></a>
-    </div>
-    <div class="col-md-7">
-        <div class="page-header">
-            <h2>Welcome!</h2>
+    <!--Welcome message and self description-->
+    <row>
+        <div class="col-md-1 col-lg-1">
+            <!--This should be removed from index page and put in the other pages-->
+            <a href="#"><img src="../Resources/websiteReturnBtn.png" alt="Return button" class="img-responsive"></a>
+        </div>
+        <div class="col-md-8 col-lg-8">
+            <div class="page-header">
+                <h2>Welcome!</h2>
 
-            <p>
-                Now I know what you might be thinking "Ohh another bootstrap page!" and you're right, it <strong>is</strong>
-                just another bootstrap page. <strong>BUT</strong> this is a special bootstrap page; it's mine!
+                <p>
+                    Now I know what you might be thinking "Ohh another bootstrap page!" and you're right, it <strong>is</strong>
+                    just another bootstrap page. <strong>BUT</strong> this is a special bootstrap page; it's mine!
+                </p>
+                <p>
+                    So who am I you might be asking?
+                </p>
+            </div>
+
+            <p id="SelfDescription">
+                I am a software development student at Östra Gymnasiet in Skogås, Sweden  and I have a passion for problem solving and
+                creating creative solutions. In my work I strive to be a good teamplayer and to work with an open mind meaning I listen and
+                always try to look from another perspective.
             </p>
             <p>
-                So who am I you might be asking?
+                My goals are to always learn new things, to be a good team asset and to deliever the highest quality software I can.
             </p>
         </div>
+        <div class="col-md-3 col-lg-3"></div>
+    </row>
+    <!--Images-->
 
-        <p id="SelfDescription">
-            I am a software development student at Östra Gymnasiet in Skogås, Sweden  and I have a passion for problem solving and
-            creating creative solutions. In my work I strive to be a good teamplayer and to work with an open mind meaning I listen and
-            always try to look from another perspective.
-        </p>
-        <p>
-            My goals are to always learn new things, to be a good team asset and to deliever the highest quality software I can.
-        </p>
-    </div>
-    <div class="col-md-4" style="background-color: green"></div>
 </div>
