--- a/MyPage/MyPage/Views/Shared/_Layout.cshtml
+++ b/MyPage/MyPage/Views/Shared/_Layout.cshtml
@@ -12,14 +12,11 @@
 <body>
     <nav class="navbar navbar-default navbar-static-top">
         <div class="container-fluid">
+            <div class="col-md-1"></div>
             <!--Home button-->
             <div class="navbar-header">
                 <a class="navbar-brand " href="/"><span class="glyphicon glyphicon-home"></span></a>
-            </div>
-            <!--Projects view link-->
-            <ul class="nav navbar-nav">
-                <li><a href="#">Projects</a></li>
-            </ul>      
+            </div>    
             <!--Dropdown menu-->
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
