Added navigation buttons. Changed navbar to follow page if scrolled. Updated quick view to better reflect img link content.

--- a/MyPage/MyPage/Views/Shared/_Layout.cshtml
+++ b/MyPage/MyPage/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link href="~/StyleSheetMain.css" rel="stylesheet" />
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-static-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="col-md-1"></div>
             <!--Home button-->
@@ -24,7 +24,9 @@
                     <ul class="dropdown-menu">
                         <li><a href="/">Home</a></li>
                         <li><a href="#">Projects</a></li>
-                        <li><a href="#SelfDescription">About me</a></li>
+                        <li><a href="#SelfDescription">About Me</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Github</a></li>
                     </ul>
                 </li>
             </ul>
