--- a/MyPage/MyPage/StyleSheetMain.css
+++ b/MyPage/MyPage/StyleSheetMain.css
@@ -1,11 +1,37 @@
 ﻿body {
+    padding-top: 5%;
 }
 
-p {
-    font-size: medium;
+div.circle-image-link {
+    /* make it responsive */
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+    display: block;
+    /* div height to be the same as width*/
+    padding-top: 100%;
+    /* make it a cirkle */
+    border-radius: 50%;
+    /* Centering on image`s center*/
+    background-position-y: center;
+    background-position-x: center;
+    background-repeat: no-repeat;
+    /* it makes the clue thing, takes smaller dimention to fill div */
+    background-size: cover;
+    /* it is optional, for making this div centered in parent*/
+    margin: 0 auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    text-align: center;
 }
 
-.navbar {
-    background: rgba(255, 255, 255, 0);
+.circle-image-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    color: #eee;
+    font-size: xx-large;
 }
-
