--- a/MyPage/MyPage/Views/Home/Index.cshtml
+++ b/MyPage/MyPage/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿<!--TODO: Add images for links, adapt for mobiles and create views for contact and projects.-->
 @{
     ViewBag.Title = "Index";
 }
@@ -35,5 +35,21 @@
         <div class="col-md-3 col-lg-3"></div>
     </row>
     <!--Images-->
-
+    <row>
+        <div class="col-md-4">
+            <div class="circle-image-link" style="background-image:url(../Resources/profilePicture.png)">
+                <p class="circle-image-text">Projects</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="circle-image-link" style="background-image:url(../Resources/profilePicture.png)">
+                <p class="circle-image-text">Contact</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="circle-image-link" style="background-image:url(../Resources/profilePicture.png)">
+                <p class="circle-image-text">Github</p>
+            </div>
+        </div>
+    </row>
 </div>
