Added dropdown menu to be used for selecting stylesheet

--- a/MyPage/MyPage/Views/Home/Index.cshtml
+++ b/MyPage/MyPage/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<!--TODO: Add images for links, adapt for mobiles and create views for contact and projects.-->
+﻿<!--TODO: adapt for mobiles and create views for contact and projects.-->
 @{
     ViewBag.Title = "Index";
 }
