--- a/MyPage/MyPage/Views/Shared/_Layout.cshtml
+++ b/MyPage/MyPage/Views/Shared/_Layout.cshtml
@@ -17,8 +17,15 @@
             <div class="navbar-header">
                 <a class="navbar-brand " href="/"><span class="glyphicon glyphicon-home"></span></a>
             </div>    
-            <!--Dropdown menu-->
+            <!--Dropdown menus-->
             <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Color Scheme<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li>Test</li>
+                        <li>Test2</li>
+                    </ul>
+                </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Quick View<span class="caret"></span></a>
                     <ul class="dropdown-menu">
