Removed return button from index, added ability to switch between 2 themes. Added new stylesheet for second theme.

--- a/MyPage/MyPage/Views/Home/Index.cshtml
+++ b/MyPage/MyPage/Views/Home/Index.cshtml
@@ -6,10 +6,7 @@
 <div class="container">
     <!--Welcome message and self description-->
     <row>
-        <div class="col-md-1 col-lg-1">
-            <!--This should be removed from index page and put in the other pages-->
-            <a href="#"><img src="../Resources/websiteReturnBtn.png" alt="Return button" class="img-responsive"></a>
-        </div>
+        <div class="col-md-1 col-lg-1"></div>
         <div class="col-md-8 col-lg-8">
             <div class="page-header">
                 <h2>Welcome!</h2>
