--- a/MyPage/MyPage/Views/Shared/_Layout.cshtml
+++ b/MyPage/MyPage/Views/Shared/_Layout.cshtml
@@ -7,9 +7,11 @@
     <script src="~/scripts/jquery-1.10.2.min.js"></script>
     <script src="~/scripts/bootstrap.min.js"></script>
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/StyleSheetMain.css" rel="stylesheet" />
+    <link href="~/StyleSheetMain.css" title="light" rel="stylesheet" />
+    <link href="~/StyleSheetDark.css" title="dark" rel="alternate stylesheet" />
+    <script src="~/Scripts.js"></script>
 </head>
-<body>
+<body onload="set_style_from_cookie()">
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="col-md-1"></div>
@@ -22,8 +24,8 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Color Scheme<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li>Test</li>
-                        <li>Test2</li>
+                        <li><a onclick="switch_style('light');return false;" name="theme" value="Light Theme" id="light">Light</a></li>
+                        <li><a onclick="switch_style('dark');return false;" name="theme" value="Dark Theme" id="dark">Dark</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
