Added space between images and text in index. Added links to pictures in index

--- a/MyPage/MyPage/StyleSheetMain.css
+++ b/MyPage/MyPage/StyleSheetMain.css
@@ -3,6 +3,10 @@
     background-color: #CCCCCC;
 }
 
+#imageRow {
+    padding-top: 30%;
+}
+
 div.circle-image-link {
     /* make it responsive */
     max-width: 100%;
