--- a/MyPage/MyPage/Views/Home/Index.cshtml
+++ b/MyPage/MyPage/Views/Home/Index.cshtml
@@ -32,21 +32,29 @@
         <div class="col-md-3 col-lg-3"></div>
     </row>
     <!--Images-->
-    <row>
-        <div class="col-md-4">
-            <div class="circle-image-link" style="background-image:url(../Resources/profilePicture.png)">
-                <p class="circle-image-text">Projects</p>
+    <div id="imageRow">
+        <row>
+            <div class="col-md-4">
+                <a href="/Home/Projects">
+                    <div class="circle-image-link" style="background-image:url(../Resources/profilePicture.png)">
+                        <p class="circle-image-text">Projects</p>
+                    </div>
+                </a>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="circle-image-link" style="background-image:url(../Resources/profilePicture.png)">
-                <p class="circle-image-text">Contact</p>
+            <div class="col-md-4">
+                <a href="/Home/Contact">
+                    <div class="circle-image-link" style="background-image:url(../Resources/profilePicture.png)">
+                        <p class="circle-image-text">Contact</p>
+                    </div>
+                </a>
             </div>
-        </div>
-        <div class="col-md-4">
-            <div class="circle-image-link" style="background-image:url(../Resources/profilePicture.png)">
-                <p class="circle-image-text">Github</p>
+            <div class="col-md-4">
+                <a href="https://github.com/JesperOscarsson">
+                    <div class="circle-image-link" style="background-image:url(../Resources/profilePicture.png)">
+                        <p class="circle-image-text">Github</p>
+                    </div>
+                </a>
             </div>
-        </div>
-    </row>
+        </row>
+    </div>
 </div>
