--- a/MyPage/MyPage/Views/Home/Index.cshtml
+++ b/MyPage/MyPage/Views/Home/Index.cshtml
@@ -36,21 +36,21 @@
         <row>
             <div class="col-md-4">
                 <a href="/Home/Projects">
-                    <div class="circle-image-link" style="background-image:url(../Resources/profilePicture.png)">
+                    <div class="circle-image-link" style="background-image:url(../Resources/projectsImg.jpg)">
                         <p class="circle-image-text">Projects</p>
                     </div>
                 </a>
             </div>
             <div class="col-md-4">
                 <a href="/Home/Contact">
-                    <div class="circle-image-link" style="background-image:url(../Resources/profilePicture.png)">
+                    <div class="circle-image-link" style="background-image:url(../Resources/contactImg.jpg)">
                         <p class="circle-image-text">Contact</p>
                     </div>
                 </a>
             </div>
             <div class="col-md-4">
                 <a href="https://github.com/JesperOscarsson">
-                    <div class="circle-image-link" style="background-image:url(../Resources/profilePicture.png)">
+                    <div class="circle-image-link" style="background-image:url(../Resources/githubImg.png)">
                         <p class="circle-image-text">Github</p>
                     </div>
                 </a>
