Updated light theme design, added quick view links for projects, contact & github.

--- a/MyPage/MyPage/StyleSheetMain.css
+++ b/MyPage/MyPage/StyleSheetMain.css
@@ -1,6 +1,10 @@
 ﻿body {
     padding-top: 5%;
-    background-color: #CCCCCC;
+    background-color: #f1eded;
+}
+
+p {
+    font-size: medium;
 }
 
 #imageRow {
