--- a/MyPage/MyPage/Views/Shared/_Layout.cshtml
+++ b/MyPage/MyPage/Views/Shared/_Layout.cshtml
@@ -32,10 +32,10 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Quick View<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/">Home</a></li>
-                        <li><a href="#">Projects</a></li>
+                        <li><a href="/Home/Projects">Projects</a></li>
                         <li><a href="#SelfDescription">About Me</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">Github</a></li>
+                        <li><a href="/Home/Contact">Contact</a></li>
+                        <li><a href="https://github.com/JesperOscarsson">Github</a></li>
                     </ul>
                 </li>
             </ul>
