--- a/EmulatorUpgf/EmulatorUpgf/Views/Shared/_LayoutPage.cshtml
+++ b/EmulatorUpgf/EmulatorUpgf/Views/Shared/_LayoutPage.cshtml
@@ -18,7 +18,7 @@
             </div>
             <!--Spamlist link-->
             <div class="navbar-header">
-                <a class="navbar-brand" href="/">Spamlist</a>
+                <a class="navbar-brand" href="/Home/SpamList">Spamlist</a>
             </div>       
         </div>
     </nav>
