Changed design on index

--- a/EmulatorUpgf/EmulatorUpgf/Views/Home/Index.cshtml
+++ b/EmulatorUpgf/EmulatorUpgf/Views/Home/Index.cshtml
@@ -2,8 +2,10 @@
     <h2>Sign up for spam mail today!</h2>
     @using (Html.BeginForm())
     {
-        <p>Enter your name: @Html.TextBox("Name")</p>
-        <p>Enter your number: @Html.TextBox("Phone")</p>
+        <p>Enter your name:</p>
+        <p>@Html.TextBox("Name")</p>
+        <p>Enter your number:</p>
+        <p>@Html.TextBox("Phone")</p>
         <button type="submit">By pressing this you agree to be spammed by shitty companies</button>
     }
 </div>
