Added beginnings of projects page

--- a/MyPage/MyPage/StyleSheetMain.css
+++ b/MyPage/MyPage/StyleSheetMain.css
@@ -46,3 +46,9 @@ div.circle-image-link {
     color: #eee;
     font-size: xx-large;
 }
+
+project-list-group button{
+    background: none;
+    border: none;
+    font: inherit;
+}
