--- a/MyPage/MyPage/Views/Home/Projects.cshtml
+++ b/MyPage/MyPage/Views/Home/Projects.cshtml
@@ -3,49 +3,33 @@
     ViewBag.Title = "Projects";
 }
 
-<h2>Projects</h2>
+
 
 <div class="container">
-    <div class="row">
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-        <p>content</p>
-    </div>
+    <h2>Projects</h2>
+
+    <ul class="list-group project-list-group">
+        <li class="list-group-item" data-toggle="collapse" data-target="#project1"><span>Project#1</span>
+            <div id="project1" class="row collapse">
+                <div class="col-sm-5 col-md-5 col-lg-5">
+                    <h4 class="page-header"><strong>Project titel</strong></h4>
+                    <p><i>Brief summary</i></p>
+                    <p class="page-header">Details</p>
+                    <p>Links</p>
+                </div>
+            </div>
+        </li>
+        <li class="list-group-item" data-toggle="collapse" data-target="#project2">
+            <span>Project#2</span>
+            <div id="project2" class="collapse">
+                Lorem ipsum dolor text....
+            </div>
+        </li>
+        <li class="list-group-item" data-toggle="collapse" data-target="#project3">
+            <span>Project#3</span>
+            <div id="project3" class="collapse">
+                Lorem ipsum dolor text....
+            </div>
+        </li>
+    </ul>
 </div>
