Changed some colors and effects in dark design. Changed how color layout is changed, now cookie works!

--- a/MyPage/MyPage/Views/Home/Index.cshtml
+++ b/MyPage/MyPage/Views/Home/Index.cshtml
@@ -9,11 +9,11 @@
         <div class="col-md-1 col-lg-1"></div>
         <div class="col-md-8 col-lg-8">
             <div class="page-header">
-                <h2>Welcome!</h2>
+                <h2 class="Orange">Welcome!</h2>
 
                 <p>
-                    Now I know what you might be thinking "Ohh another bootstrap page!" and you're right, it <strong>is</strong>
-                    just another bootstrap page. <strong>BUT</strong> this is a special bootstrap page; it's mine!
+                    Now I know what you might be thinking "Ohh another bootstrap page!" and you're right, it <strong class="Orange">is</strong>
+                    just another bootstrap page. <strong class="Orange">BUT</strong> this is a special bootstrap page; it's mine!
                 </p>
                 <p>
                     So who am I you might be asking?
@@ -32,7 +32,7 @@
         <div class="col-md-3 col-lg-3"></div>
     </row>
     <!--Images-->
-    <div id="imageRow">
+    <div id="imageRow" class="HOM">
         <row>
             <div class="col-md-4">
                 <a href="/Home/Projects">
