--- a/MyPage/MyPage/StyleSheetDark.css
+++ b/MyPage/MyPage/StyleSheetDark.css
@@ -9,13 +9,10 @@ p {
     font-size: large;
 }
 
-h {
+.Orange {
     color: #A2482E;
 }
 
-strong {
-    color: #A2482E;
-}
 /*When navbar dropdown menus are toggled*/
 .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
     background-color: #3F3F3F;
@@ -32,6 +29,16 @@ strong {
 /*Navbar background color*/
 .navbar-fixed-top {
     background-color: #201F1D;
+}
+
+.navbar-default .navbar-nav > li > a {
+    color: #A2482E;
+    font-size: medium;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+    background-color: #3F3F3F;
+    color: #FFFFFF;
 }
 
 .circle-image-text {
