--- a/MyPage/MyPage/StyleSheetMain.css
+++ b/MyPage/MyPage/StyleSheetMain.css
@@ -52,3 +52,15 @@ project-list-group button{
     border: none;
     font: inherit;
 }
+
+@media screen and (min-width: 768px) {
+    .HOD {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .HOM {
+        display: none;
+    }
+}
