Minor GUI changes in projects view

--- a/MyPage/MyPage/Views/Home/Projects.cshtml
+++ b/MyPage/MyPage/Views/Home/Projects.cshtml
@@ -1,34 +1,22 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Projects";
 }
 
-
-
 <div class="container">
     <h2>Projects</h2>
-
     <ul class="list-group project-list-group">
-        <li class="list-group-item" data-toggle="collapse" data-target="#project1"><span>Project#1</span>
+        <li class="list-group-item" data-toggle="collapse" data-target="#project1">
+            <span>Project#1</span>
             <div id="project1" class="row collapse">
-                <div class="col-sm-5 col-md-5 col-lg-5">
+                <div class="col-sm-6">
                     <h4 class="page-header"><strong>Project titel</strong></h4>
                     <p><i>Brief summary</i></p>
                     <p class="page-header">Details</p>
                     <p>Links</p>
                 </div>
-            </div>
-        </li>
-        <li class="list-group-item" data-toggle="collapse" data-target="#project2">
-            <span>Project#2</span>
-            <div id="project2" class="collapse">
-                Lorem ipsum dolor text....
-            </div>
-        </li>
-        <li class="list-group-item" data-toggle="collapse" data-target="#project3">
-            <span>Project#3</span>
-            <div id="project3" class="collapse">
-                Lorem ipsum dolor text....
+                <div class="col-sm-6">
+                    <!--Images--> 
+                </div>
             </div>
         </li>
     </ul>
